--- a/app/views/shared/_likes_list.html.haml
+++ b/app/views/shared/_likes_list.html.haml
@@ -1,124 +1,126 @@
-.l-content
-  %section.l-likes-container
-    %h2.l-chapter-head 
-      いいね一覧
-    %ul.mypage-item-list 
-      %li 
-        =link_to "##", class: mypage-item-link
-          %figure
-            = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
-            %figcaption.mypage-sold 
-              .item-sold-out-badge
-                %div
-                  SOLD
-                    \::after
-          .mypage-item-body
-            .mypage-item-text
-              メルカリ限定詰め合わせセット
-            .mypage-item-text
-              ¥4,000
-          %i.icon-arrow-right 
-            \::before
-      %li 
-        =link_to "##", class: mypage-item-link
-          %figure
-            = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
-            %figcaption.mypage-sold 
-              .item-sold-out-badge
-                %div
-                  SOLD
-                    \::after
-          .mypage-item-body
-            .mypage-item-text
-              メルカリ限定詰め合わせセット
-            .mypage-item-text
-              ¥4,000
-          %i.icon-arrow-right 
-            \::before
-      %li 
-        =link_to "##", class: mypage-item-link
-          %figure
-            = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
-            %figcaption.mypage-sold 
-              .item-sold-out-badge
-                %div
-                  SOLD
-                    \::after
-          .mypage-item-body
-            .mypage-item-text
-              メルカリ限定詰め合わせセット
-            .mypage-item-text
-              ¥4,000
-          %i.icon-arrow-right 
-            \::before
-      %li 
-        =link_to "##", class: mypage-item-link
-          %figure
-            = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
-            %figcaption.mypage-sold 
-              .item-sold-out-badge
-                %div
-                  SOLD
-                    \::after
-          .mypage-item-body
-            .mypage-item-text
-              メルカリ限定詰め合わせセット
-            .mypage-item-text
-              ¥4,000
-          %i.icon-arrow-right 
-            \::before
-      %li 
-        =link_to "##", class: mypage-item-link
-          %figure
-            = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
-            %figcaption.mypage-sold 
-              .item-sold-out-badge
-                %div
-                  SOLD
-                    \::after
-          .mypage-item-body
-            .mypage-item-text
-              メルカリ限定詰め合わせセット
-            .mypage-item-text
-              ¥4,000
-          %i.icon-arrow-right 
-            \::before
-      %li 
-        =link_to "##", class: mypage-item-link
-          %figure
-            = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
-            %figcaption.mypage-sold 
-              .item-sold-out-badge
-                %div
-                  SOLD
-                    \::after
-          .mypage-item-body
-            .mypage-item-text
-              メルカリ限定詰め合わせセット
-            .mypage-item-text
-              ¥5,000
-          %i.icon-arrow-right 
-            \::before   
-      %li 
-        =link_to "##", class: mypage-item-link
-          %figure
-            = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
-            %figcaption.mypage-sold 
-          .mypage-item-body
-            .mypage-item-text
-              メルカリ限定詰め合わせセット
-            .mypage-item-text
-              ¥4,000
-          %i.icon-arrow-right 
-            \::before  
-  %ul.mypage-history.pager
-    %li.pager-prev.pager-cell 
-      =link_to "#"
-        %i.icon-arrow-left 
-          \::before
-    %li.pager-next.pager-cell
-      =link_to "#"
-        %i.icon-arrow-right
-          \::before
+%main.l-container.clearfix 
+  .default-container 
+    .l-content
+      %section.l-likes-container
+        %h2.l-chapter-head 
+          いいね一覧
+        %ul.mypage-item-list 
+          %li 
+            =link_to "##", class: mypage-item-link
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                %figcaption.mypage-sold 
+                  .item-sold-out-badge
+                    %div
+                      SOLD
+                        \::after
+              .mypage-item-body
+                .mypage-item-text
+                  メルカリ限定詰め合わせセット
+                .mypage-item-text
+                  ¥4,000
+              %i.icon-arrow-right 
+                \::before
+          %li 
+            =link_to "##", class: mypage-item-link
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                %figcaption.mypage-sold 
+                  .item-sold-out-badge
+                    %div
+                      SOLD
+                        \::after
+              .mypage-item-body
+                .mypage-item-text
+                  メルカリ限定詰め合わせセット
+                .mypage-item-text
+                  ¥4,000
+              %i.icon-arrow-right 
+                \::before
+          %li 
+            =link_to "##", class: mypage-item-link
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                %figcaption.mypage-sold 
+                  .item-sold-out-badge
+                    %div
+                      SOLD
+                        \::after
+              .mypage-item-body
+                .mypage-item-text
+                  メルカリ限定詰め合わせセット
+                .mypage-item-text
+                  ¥4,000
+              %i.icon-arrow-right 
+                \::before
+          %li 
+            =link_to "##", class: mypage-item-link
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                %figcaption.mypage-sold 
+                  .item-sold-out-badge
+                    %div
+                      SOLD
+                        \::after
+              .mypage-item-body
+                .mypage-item-text
+                  メルカリ限定詰め合わせセット
+                .mypage-item-text
+                  ¥4,000
+              %i.icon-arrow-right 
+                \::before
+          %li 
+            =link_to "##", class: mypage-item-link
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                %figcaption.mypage-sold 
+                  .item-sold-out-badge
+                    %div
+                      SOLD
+                        \::after
+              .mypage-item-body
+                .mypage-item-text
+                  メルカリ限定詰め合わせセット
+                .mypage-item-text
+                  ¥4,000
+              %i.icon-arrow-right 
+                \::before
+          %li 
+            =link_to "##", class: mypage-item-link
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                %figcaption.mypage-sold 
+                  .item-sold-out-badge
+                    %div
+                      SOLD
+                        \::after
+              .mypage-item-body
+                .mypage-item-text
+                  メルカリ限定詰め合わせセット
+                .mypage-item-text
+                  ¥5,000
+              %i.icon-arrow-right 
+                \::before   
+          %li 
+            =link_to "##", class: mypage-item-link
+              %figure
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                %figcaption.mypage-sold 
+              .mypage-item-body
+                .mypage-item-text
+                  メルカリ限定詰め合わせセット
+                .mypage-item-text
+                  ¥4,000
+              %i.icon-arrow-right 
+                \::before  
+      %ul.mypage-history.pager
+        %li.pager-prev.pager-cell 
+          =link_to "#"
+            %i.icon-arrow-left 
+              \::before
+        %li.pager-next.pager-cell
+          =link_to "#"
+            %i.icon-arrow-right
+              \::before
 
           
