--- a/app/views/shared/_likes_list.html.haml
+++ b/app/views/shared/_likes_list.html.haml
@@ -6,9 +6,9 @@
           いいね一覧
         %ul.mypage-item-list 
           %li 
-            =link_to "##", class: mypage-item-link
+            =link_to "##", class: 'mypage-item-link' do
               %figure
-                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'
                 %figcaption.mypage-sold 
                   .item-sold-out-badge
                     %div
@@ -22,9 +22,9 @@
               %i.icon-arrow-right 
                 \::before
           %li 
-            =link_to "##", class: mypage-item-link
+            =link_to "##", class: 'mypage-item-link' do
               %figure
-                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'
                 %figcaption.mypage-sold 
                   .item-sold-out-badge
                     %div
@@ -38,9 +38,9 @@
               %i.icon-arrow-right 
                 \::before
           %li 
-            =link_to "##", class: mypage-item-link
+            =link_to "##", class: 'mypage-item-link' do
               %figure
-                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'
                 %figcaption.mypage-sold 
                   .item-sold-out-badge
                     %div
@@ -54,9 +54,9 @@
               %i.icon-arrow-right 
                 \::before
           %li 
-            =link_to "##", class: mypage-item-link
+            =link_to "##", class: 'mypage-item-link'
               %figure
-                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'
                 %figcaption.mypage-sold 
                   .item-sold-out-badge
                     %div
@@ -70,9 +70,9 @@
               %i.icon-arrow-right 
                 \::before
           %li 
-            =link_to "##", class: mypage-item-link
+            =link_to "##", class: 'mypage-item-link' do
               %figure
-                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'
                 %figcaption.mypage-sold 
                   .item-sold-out-badge
                     %div
@@ -86,9 +86,9 @@
               %i.icon-arrow-right 
                 \::before
           %li 
-            =link_to "##", class: mypage-item-link
+            =link_to "##", class: 'mypage-item-link' do
               %figure
-                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'
                 %figcaption.mypage-sold 
                   .item-sold-out-badge
                     %div
@@ -102,9 +102,9 @@
               %i.icon-arrow-right 
                 \::before   
           %li 
-            =link_to "##", class: mypage-item-link
+            =link_to "##", class: 'mypage-item-link' do
               %figure
-                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: ''
+                = image_tag '/mercari_logo_basic', size: "", alt: "" , class: 'lazyloaded'
                 %figcaption.mypage-sold 
               .mypage-item-body
                 .mypage-item-text
@@ -115,11 +115,11 @@
                 \::before  
       %ul.mypage-history.pager
         %li.pager-prev.pager-cell 
-          =link_to "#"
+          =link_to "#" do
             %i.icon-arrow-left 
               \::before
         %li.pager-next.pager-cell
-          =link_to "#"
+          =link_to "#" do
             %i.icon-arrow-right
               \::before
 
