--- a/app/views/shared/_put_up_goods_on_deal.html.haml
+++ b/app/views/shared/_put_up_goods_on_deal.html.haml
@@ -6,15 +6,15 @@
       %ul.listing-tabs
         %li. 
           %h3
-            =link_to "#"
+            =link_to "#" do
               出品中
         %li.active
           %h3
-            =link_to "#"
+            =link_to "#" do
               取引中
-        %li.active
+        %li.
           %h3
-            =link_to "#"
+            =link_to "#" do
               売却済み
       .tab-content
         %ul#mypage-tab-transaction-old.mypage-item-list.tab-pane.active
@@ -23,10 +23,10 @@
 
     %ul.mypage-history.pager
       %li.pager-prev.pager-cell 
-        =link_to "#"
+        =link_to "#" do
           %i.icon-arrow-left 
             \::before
       %li.pager-next.pager-cell 
-        =link_to "#"
+        =link_to "#" do
           %i.icon-arrow-right
             \::before
