--- a/app/views/shared/_purchased_on_deal.html.haml
+++ b/app/views/shared/_purchased_on_deal.html.haml
@@ -6,17 +6,17 @@
       %ul.mypage-tabs
         %li.active
           %h3
-            =link_to "#"
+            =link_to "#" do
               取引中
         %li.
           %h3 
-            =link_to "#"
+            =link_to "#" do
               過去の取引
       .tab-content
-        %ul#mypage-tab-transaction-now.mypage-item-list.tab-pane.active
+        %ul#mypage-tab-transaction-now.mypage-item-list__tab-pane--active
           %li.mypage-item-not-found.bold
             取引中の商品がありません
-        %ul#mypage-tab-transaction-old.mypage-item-list.tab-pane
+        %ul#mypage-tab-transaction-old.mypage-item-list__tab-pane
           %li.mypage-item-not-found.bold
           　過去に取引した商品がありません
 
