--- a/app/views/shared/_purchased_html.haml
+++ b/app/views/shared/_purchased_html.haml
@@ -6,20 +6,20 @@
       %ul.mypage-tabs
         %li.active
           %h3
-            =link_to "#"
+            =link_to "#" do
               取引中
         %li.
           %h3 
-            =link_to "#"
+            =link_to "#" do
               過去の取引
       .tab-content
         %ul#mypage-tab-transaction-now.mypage-item-list.tab-pane
           %li.mypage-item-not-found.bold
             取引中の商品がありません
-            
+
         %ul#mypage-tab-transaction-old.mypage-item-list.tab-pane.active
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: "mypage-item-list" do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -32,7 +32,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do 
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -45,7 +45,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do 
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -58,7 +58,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do 
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -71,7 +71,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -84,7 +84,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -97,7 +97,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -110,7 +110,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -123,7 +123,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -136,7 +136,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -149,7 +149,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -162,7 +162,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -175,7 +175,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -188,7 +188,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -201,7 +201,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
@@ -214,7 +214,7 @@
               %i.icon-arrow-right 
                 \::before
           %li
-            =link_to "#", class: mypage-item-link
+            =link_to "#", class: 'mypage-item-list' do
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
